# Moodme-console

./: CMakeLists.txt  Console.cpp  Console.h  Readme.md  main.cpp
include/: client.h
src/: Console.cpp  Console.h  InvalidResponse.h  client.cpp  invalidResponse.cpp  main.cpp
